# shairport-sync-for-openwrt

./: Makefile
patches/: Makefile
src/: ADDINGTOHOME.md  AIRPLAY2.md  BUILD.md  CAR INSTALL.md  CONFIGURATION FLAGS.md  CYGWIN.md  MQTT.md  Makefile.am  OPENBSD.md  README.md  RELEASENOTES.md  REPORTING ISSUES.md  TROUBLESHOOTING.md  activity_monitor.c  alac.h  audio.c  audio.h  audio_alsa.c  audio_ao.c  audio_dummy.c  audio_jack.c  audio_pa.c  audio_pipe.c  audio_pw.c  audio_sndio.c  audio_soundio.c  audio_stdout.c  common.c  common.h  configure.ac  dacp.c  dbus-service.c  definitions.h  mdns.c  mdns.h  mdns_avahi.c  mdns_dns_sd.c  mdns_external.c  mdns_tinysvcmdns.c  metadata_hub.c  (+16 more)
src/ADVANCED TOPICS/: AdjustingSync.md  Events.md  GetTheBest.md  InitialConfiguration.md  Metadata.md  PulseAudioAndPipeWire.md  README.md  Statistics.md
src/docker/: Dockerfile  README.md  docker-compose.yaml
src/docker/classic/: Dockerfile  README.md
src/docker/etc/s6-overlay/s6-rc.d/02-dbus/: run
src/documents/: sample dbus commands
src/man/: shairport-sync.7  shairport-sync.7.xml  shairport-sync.html
src/plists/: get_info_response.xml
src/scripts/: shairport-sync-dbus-policy.conf  shairport-sync-mpris-policy.conf  shairport-sync.conf  shairport-sync.freebsd  shairport-sync.service-avahi.in  shairport-sync.service.in
src/tests/: configure_test.sh
